--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="low_fodmap">Low FODMAP</string>
     <string name="whole30">Whole30</string>
     <string name="apply">Apply</string>
+    <string name="search">Search</string>
 </resources>
